<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:padding="1dp"
    >

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        app:cardBackgroundColor="#4BBFA2"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        tools:ignore="RtlSymmetry">

        <!-- <ImageView

             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="60dp"
             android:src="@drawable/person" />-->

        <!-- <ImageView
             android:id="@+id/play"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="190dp"
             android:src="@drawable/play" />
 -->


        <!-- <ImageView

             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginStart="250dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="60dp"
             android:src="@drawable/phone_24" />-->

        <!--
                <ImageView

                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="120dp"
                    android:src="@drawable/message_24" />-->



        <TextView
            android:id="@+id/emergencyTpe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/fire_police_ambulance"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginTop="10dp"
            android:text="@string/phone"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/default_name"
            android:textAllCaps="true"
            android:textSize="15sp" />




        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="90dp"
            android:text="@string/date"
            android:textSize="15sp"
            android:paddingBottom="6dp"
            android:textStyle="italic" />


        <!--  <Chronometer
              android:id="@+id/time"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="10dp"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="330dp"
              android:textStyle="italic"
              android:layout_below="@+id/date"
              android:text="Time:"

              android:textSize="10dp" />-->




        <!--<TextClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="330dp"
            android:textStyle="italic"
            android:layout_below="@+id/date"
            android:text="Time:"
            android:textColor="@color/colorPrimary"
            android:textSize="10dp"
            tools:targetApi="jelly_bean_mr1" />-->


        <!--<Button
            android:id="@+id/btnRespond"
            style="@style/Platform.MaterialComponents"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="280dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="250dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button"
            android:enabled="false"
            android:text="ROUTE"


            android:textSize="23dp" />-->

        <!--<ProgressBar
            android:layout_width="138dp"
            android:layout_height="149dp"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="20dp"
            android:outlineSpotShadowColor="@color/colorPrimary"
            android:background="@mipmap/emergency_foreground"
            android:text="Respond"
            android:textColor="@color/white"

            android:textSize="30dp" />-->


    </com.google.android.material.card.MaterialCardView>

    <!--<com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:paddingStart="5dp"
        android:layout_marginBottom="15dp"
        android:paddingLeft="5dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#FFBD00"
        android:accessibilityHeading="true"
        app:cardElevation="5dp">
    <ImageView

        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/person"
        />

    <ImageView
        android:id="@+id/play"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="190dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/play"
        />

    <TextView
        android:id="@+id/mediaInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="190dp"
        android:text="NO AUDIO"

        android:textSize="20dp" />


    <ImageView

        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="250dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/phone_24"
        />


    <ImageView

        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/message_24"
        />


    <TextView
        android:id="@id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="115dp"
        android:text="Hey I need help!"

        android:textSize="20dp" />

    <TextView
        android:id="@+id/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="58dp"
        android:text="Oswald"

        android:textSize="20dp" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="58dp"
        android:text="0542447188"

        android:textSize="20dp" />

    <TextView
        android:id="@+id/lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="160dp"
        android:text="5.69787"

        android:textSize="20dp" />

    <TextView
        android:id="@+id/lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="160dp"
        android:text="-0.18798"

        android:textSize="20dp" />


    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="320dp"
        android:text="Date:"

        android:textSize="10dp"
        android:textStyle="italic"/>



    &lt;!&ndash;  &lt;!&ndash;  <Chronometer
    android:id="@+id/time"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="330dp"
    android:textStyle="italic"
    android:layout_below="@+id/date"
    android:text="Time:"

    android:textSize="10dp" />&ndash;&gt;&ndash;&gt;



    <ImageView
        android:id="@id/picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="200dp"
        />

    &lt;!&ndash; &lt;!&ndash;<TextClock
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="330dp"
    android:textStyle="italic"
    android:layout_below="@+id/date"
    android:text="Time:"
    android:textColor="@color/colorPrimary"
    android:textSize="10dp"
    tools:targetApi="jelly_bean_mr1" />&ndash;&gt;
    &ndash;&gt;


    <Button
        android:id="@+id/btnRespond"
        style="@style/Platform.MaterialComponents"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="280dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="320dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button"
        android:enabled="false"
        android:text="ROUTE"


        android:textSize="23dp" />

    </com.google.android.material.card.MaterialCardView>-->


    <!-- &lt;!&ndash;<ProgressBar
     android:layout_width="138dp"
     android:layout_height="149dp"
     android:layout_marginStart="120dp"
     android:layout_marginLeft="150dp"
     android:layout_marginTop="20dp"
     android:outlineSpotShadowColor="@color/colorPrimary"
     android:background="@mipmap/emergency_foreground"
     android:text="Respond"
     android:textColor="@color/white"

     android:textSize="30dp" />&ndash;&gt;-->

    <!--<androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:paddingStart="5dp"
        android:layout_marginBottom="15dp"
        android:paddingLeft="5dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:accessibilityHeading="true"
        app:cardElevation="10dp"
     >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >
        <ImageView

            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/person"
            />

        <ImageView
            android:id="@+id/play"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="190dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/play"
            />

        <TextView
            android:id="@+id/mediaInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="190dp"
            android:text="NO AUDIO"

            android:textSize="20dp" />


        <ImageView

            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="250dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/phone_24"
            />


        <ImageView

            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/message_24"
            />


        <TextView
            android:id="@id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="115dp"
            android:text="Hey I need help!"

            android:textSize="20dp" />

        <TextView
            android:id="@+id/fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="58dp"
            android:text="Oswald"

            android:textSize="20dp" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="58dp"
            android:text="0542447188"

            android:textSize="20dp" />

        <TextView
            android:id="@+id/lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="160dp"
            android:text="5.69787"

            android:textSize="20dp" />

        <TextView
            android:id="@+id/lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="160dp"
            android:text="-0.18798"

            android:textSize="20dp" />


        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="320dp"
            android:text="Date:"

            android:textSize="10dp"
            android:textStyle="italic"/>



      &lt;!&ndash;  <Chronometer
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="330dp"
            android:textStyle="italic"
            android:layout_below="@+id/date"
            android:text="Time:"

            android:textSize="10dp" />&ndash;&gt;



        <ImageView
            android:id="@+id/picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="180dp"
            android:layout_marginLeft="150dp"
            android:src="@drawable/button"
            android:layout_marginTop="200dp"
            />

        &lt;!&ndash;<TextClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="330dp"
            android:textStyle="italic"
            android:layout_below="@+id/date"
            android:text="Time:"
            android:textColor="@color/colorPrimary"
            android:textSize="10dp"
            tools:targetApi="jelly_bean_mr1" />&ndash;&gt;



        <Button
            android:id="@+id/btnRespond"
            style="@style/Platform.MaterialComponents"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="280dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="320dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button"
            android:enabled="false"
            android:text="ROUTE"


            android:textSize="23dp" />

        &lt;!&ndash;<ProgressBar
            android:layout_width="138dp"
            android:layout_height="149dp"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="20dp"
            android:outlineSpotShadowColor="@color/colorPrimary"
            android:background="@mipmap/emergency_foreground"
            android:text="Respond"
            android:textColor="@color/white"

            android:textSize="30dp" />&ndash;&gt;
    </RelativeLayout>
    </androidx.cardview.widget.CardView>-->


</LinearLayout>






